# robo20

./: .gitignore
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 035d8520a235_add_follow_chart_tf_to_chart_indicators.py  108f2e33f9b1_candles_hypertable.py  2b7cd0156ca6_add_chart_indicators_table.py  9bd0cb270ce2_initial.py  a1c3f5e90b21_add_condition_tree_to_strategy_steps.py
backend/app/: __init__.py  main.py
backend/app/api/: candles.py  indicators.py  strategies.py
backend/app/connectors/: __init__.py  base.py  bybit.py
backend/app/core/: config.py  database.py
backend/app/indicators/: __init__.py  base.py  builtins.py  custom.py  registry.py  swing.py
backend/app/models/: __init__.py  backtest.py  candle.py  chart_indicator.py  notification_settings.py  order.py  strategy.py
backend/app/services/: market_data.py
backend/app/statemachine/: __init__.py  engine.py
backend/app/ws/: __init__.py  candles.py
backend/tests/: test_market_data.py  test_state_engine.py
brainstorm/: 01-arquitetura-e-ferramentas.md
docker/: docker-compose.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: candles.ts  indicators.ts  strategies.ts
frontend/src/components/: Chart.tsx  ErrorBoundary.tsx  IndicatorPanel.tsx  LiveIndicator.tsx  StrategyBuilder.tsx  StrategyList.tsx  SymbolSelector.tsx  (+1 more)
organized/: 01-requisitos.md  02-casos-de-uso.md  03-arquitetura.md  04-plano-de-acao.md  05-tracking.md
(+5 files in other folders)
